[tool.poetry]
name = "autogen-subs"
version = "0.1.0"
description = ""
authors = ["Jing Yang <k.jingyang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "^20240927"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
